# microreader

./: .gitignore  README.md  SSD1677_PROTOCOL.md  convert_image.py  framebuffer.txt  lut_editor.py.bak  platformio.ini  ssd1677_custom_lut_guide.md
data/: bobiverse 1.txt  chapter one.txt  (+4 more)
test/: Adafruit_GFX.cpp  Adafruit_GFX.h  Arduino.h  CMakeLists.txt  EpubWordProviderTest.cpp  GreedyLayoutBidirectionalParagraphTest.cpp  GreedyLayoutStrategyTest.cpp  KnuthPlassHyphenationPageComparisonTest.cpp  KnuthPlassLayoutStrategyTest.cpp  SaveFramebufferWindows.cpp  StringWordProviderTest.cpp  TextLayoutPageRenderTest.cpp  WString.h  build_msvc.bat  hyphenation_differences.txt  platform_stubs.cpp  platform_stubs.h  test_utils.h  windows_test_simple.cpp
test/build_default/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  TextLayoutTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  textlayout_test.vcxproj  textlayout_test.vcxproj.filters
test/common/: test_globals.h
test/data/: navigation_test.txt
test/include/: Arduino.h  WString.h
test/mocks/: SD.h  platform_stubs.cpp  platform_stubs.h
test/output/: output_000_0 - og.pbm  page_ranges.txt  test_output.pbm  test_output_0.pbm  test_output_1.pbm  test_output_2.pbm  test_output_3.pbm  test_output_4.pbm  test_output_5.pbm  test_output_6.pbm  test_output_7.pbm
test/resources/: english_hyphenation_tests.txt
test/unit/epub/: EpubReaderTest.cpp
test/unit/layout/: GreedyLayoutBidirectionalParagraphTest.cpp
test/unit/parsing/: SimpleXmlParserTest.cpp
test/unit/wordprovider/: EpubMemoryTest.cpp  FileWordProviderNavigationTest.cpp  WordProviderSeekTest.cpp  WordProviderTest.cpp
(+167 files in other folders)
